--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Catalog</title>
+    <title>Catálogo de Videos</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!-- https://fonts.google.com/ -->
@@ -28,7 +28,7 @@ https://templatemo.com/tm-552-video-catalog
                         <div class="col-7 col-md-4">
                             <a href="index.html" class="tm-bg-black text-center tm-logo-container">
                                 <i class="fas fa-video tm-site-logo mb-3"></i>
-                                <h1 class="tm-site-name">Video Catalog</h1>
+                                <h1 class="tm-site-name">Videos</h1>
                             </a>
                         </div>
                         <div class="col-5 col-md-8 ml-auto mr-0">
@@ -51,7 +51,7 @@ https://templatemo.com/tm-552-video-catalog
                                                 <a class="nav-link tm-nav-link" href="about.html">About</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
+                                                <a class="nav-link tm-nav-link" href="contact.html">Contacto</a>
                                             </li>
                                         </ul>
                                     </div>
